# tele-mess-core

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.example.yml  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: release.yml
deploy/: tele-mess-core.service  tele-mess-core.user.service
docs/: api-agent.md  api.md  daily-packaging.md  local-mode.md  openapi.json  product-direction.md  releasing.md  server-mode.md
src/tele_mess_core/: __init__.py  cli.py  config.py  daily.py  daily_jobs.py  logging_setup.py  maintenance.py  models.py  openai_fallback.py  runtime_paths.py
src/tele_mess_core/archive/: __init__.py  migrations.py  schema.sql  store.py
src/tele_mess_core/server/: __init__.py  api.py  console.html  console.py  contracts.py
src/tele_mess_core/telegram/: __init__.py  auth.py  delivery.py  discovery.py  ingest.py  manager.py  runtime.py
tests/: test_api_contracts.py  test_archive_store.py  test_cli.py  test_config.py  test_daily.py  test_daily_jobs.py  test_maintenance.py  test_openai_fallback.py  test_runtime_manager.py  test_runtime_paths.py  test_sync_api.py  test_telegram_auth.py  test_telegram_delivery.py  test_telegram_discovery.py  test_telegram_ingest.py
