[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-mess-core"
version = "0.1.1"
description = "Telegram message archive core with SQLite storage and sync API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "Telethon>=1.38,<2",
  "PyYAML>=6,<7",
]

[project.scripts]
tele-mess-core = "tele_mess_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tele_mess_core = ["archive/schema.sql"]
