[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-mess-core"
version = "0.3.0"
description = "Telegram message archive core with SQLite storage and sync API"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "Telethon>=1.38,<2",
  "PyYAML>=6,<7",
]

[project.urls]
Homepage = "https://github.com/dreaifekks/tele-mess-core"
Repository = "https://github.com/dreaifekks/tele-mess-core"
Issues = "https://github.com/dreaifekks/tele-mess-core/issues"
Changelog = "https://github.com/dreaifekks/tele-mess-core/blob/master/CHANGELOG.md"

[project.scripts]
tele-mess-core = "tele_mess_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tele_mess_core = ["archive/schema.sql", "server/console.html"]
